--- a/server/Src/CoronaApp.Application/appsettings.json
+++ b/server/Src/CoronaApp.Application/appsettings.json
@@ -11,10 +11,11 @@
       }
     },
     "AllowedHosts": "*",
-    "ConnectionStrings": {
-      "CoronaDBConnectionString": "Server=localhost\\MSSQLSERVER01; Database= coronaInformation; Trusted_Connection = True;",
-      "CoronaDBConnectionStringTzippy": "Server=C1; Database= coronaInformation; Trusted_Connection = True;"
-    },
+  "ConnectionStrings": {
+    "CoronaDBConnectionString": "Server=localhost\\MSSQLSERVER01; Database= coronaInformation; Trusted_Connection = True;",
+    "CoronaDBConnectionStringTzippy": "Server=C1; Database= coronaInformation; Trusted_Connection = True;",
+    "NServiceBusPersitence": "Server=localhost\\MSSQLSERVER01; Database= coronaInformation; Trusted_Connection = True;"
+  },
     "Serilog": {
       "MinimumLevel": {
         "Default": "Information",
