--- a/server/Src/CoronaApp.Application/CoronaApp.Api.csproj
+++ b/server/Src/CoronaApp.Application/CoronaApp.Api.csproj
@@ -33,6 +33,7 @@
     </PackageReference>
     <PackageReference Include="NServiceBus" Version="7.3.0" />
     <PackageReference Include="NServiceBus.Extensions.Hosting" Version="1.0.1" />
+    <PackageReference Include="NServiceBus.Persistence.Sql" Version="5.0.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
     <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="5.4.0" />
