--- a/server/MagenDavidAdom/MagenDavidAdomService.csproj
+++ b/server/MagenDavidAdom/MagenDavidAdomService.csproj
@@ -6,13 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Messages" Version="1.2.3" />
     <PackageReference Include="NServiceBus" Version="7.3.0" />
     <PackageReference Include="NServiceBus.Persistence.Sql" Version="5.0.0" />
+    <PackageReference Include="NServiceBus.RabbitMQ" Version="5.2.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Messages\Messages.csproj" />
   </ItemGroup>
 
 </Project>
