--- a/server/Src/CoranaApp.Services/CoronaApp.Services.csproj
+++ b/server/Src/CoranaApp.Services/CoronaApp.Services.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="Messages" Version="1.2.2" />
     <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.7" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.4" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Api.Analyzers" Version="2.2.6" />
@@ -18,7 +19,6 @@
     </PackageReference>
     <PackageReference Include="NServiceBus" Version="7.3.0" />
     <PackageReference Include="NServiceBus.Persistence.Sql" Version="5.0.0" />
-    <PackageReference Include="RabbitMQ.Client" Version="6.1.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
     <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="5.4.0" />
@@ -28,7 +28,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\CoronaApp.Entities\CoronaApp.Entities.csproj" />
-    <ProjectReference Include="..\..\Messages\Messages.csproj" />
   </ItemGroup>
 
 
