--- a/server/IsolationService/IsolationService.csproj
+++ b/server/IsolationService/IsolationService.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -13,10 +13,6 @@
     <PackageReference Include="NServiceBus.SagaAudit" Version="3.0.1" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Src\CoronaApp.Application\CoronaApp.Api.csproj" />
   </ItemGroup>
 
 </Project>
