--- a/server/MagenDavidAdom/MagenDavidAdomService.csproj
+++ b/server/MagenDavidAdom/MagenDavidAdomService.csproj
@@ -6,8 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Messages" Version="1.2.6" />
+    <PackageReference Include="Messages" Version="1.2.8" />
     <PackageReference Include="NServiceBus" Version="7.3.0" />
+    <PackageReference Include="NServiceBus.Newtonsoft.Json" Version="2.2.0" />
     <PackageReference Include="NServiceBus.Persistence.Sql" Version="6.0.0" />
     <PackageReference Include="NServiceBus.RabbitMQ" Version="5.2.0" />
     <PackageReference Include="NServiceBus.SagaAudit" Version="3.0.1" />
