--- a/server/Src/CoronaApp.Application/CoronaApp.Api.csproj
+++ b/server/Src/CoronaApp.Application/CoronaApp.Api.csproj
@@ -21,7 +21,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
-    <PackageReference Include="Messages" Version="1.2.6" />
+    <PackageReference Include="Messages" Version="1.2.8" />
     <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.7" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Certificate" Version="3.1.4" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.4" />
@@ -34,6 +34,7 @@
     </PackageReference>
     <PackageReference Include="NServiceBus" Version="7.3.0" />
     <PackageReference Include="NServiceBus.Extensions.Hosting" Version="1.0.1" />
+    <PackageReference Include="NServiceBus.Newtonsoft.Json" Version="2.2.0" />
     <PackageReference Include="NServiceBus.Persistence.Sql" Version="6.0.0" />
     <PackageReference Include="NServiceBus.RabbitMQ" Version="5.2.0" />
     <PackageReference Include="NServiceBus.SagaAudit" Version="3.0.1" />
